--- a/projects/proj 3/proj3.css
+++ b/projects/proj 3/proj3.css
@@ -1,8 +1,16 @@
 .zazuma {
     display: flex;
-    justify-content: space-around;
-    gap: 400px;
+    width: 100%;
+    height: 85px;
+    padding: 7px 127px;
+    justify-content: space-between;
+    align-items: center;
+    flex-shrink: 0;
     position: fixed;
+    z-index: 100;
+    top: 0px;
+    background: #FFF;
+    box-shadow: 0px 59px 16px 0px rgba(8, 128, 0, 0.00), 0px 38px 15px 0px rgba(8, 128, 0, 0.01), 0px 21px 13px 0px rgba(8, 128, 0, 0.02), 0px 9px 9px 0px rgba(8, 128, 0, 0.04), 0px 2px 5px 0px rgba(8, 128, 0, 0.04), 0px 0px 0px 0px rgba(8, 128, 0, 0.04);
 }
 
 .href {
@@ -56,11 +64,6 @@ span {
     line-height: normal;
 }
 
-.abt {
-    position: absolute;
-    top: 92px;
-    left: 127px;
-}
 
 .oplt {
     color: #000;
@@ -80,11 +83,6 @@ p {
     line-height: normal;
 }
 
-img {
-    position: absolute;
-    right: 127px;
-    top: 92px;
-}
 
 button {
     color: #FFF;
@@ -104,4 +102,134 @@ button {
     border-radius: 30px;
     background: #75C310;
     text-decoration: none;
+}
+
+.optic {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 100px;
+    color: #000;
+    text-align: right;
+    font-family: Montserrat;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+
+}
+
+.went {
+    color: #000;
+    text-align: right;
+    font-family: Montserrat;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+
+}
+
+.wont {
+    color: #000;
+    text-align: right;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    color: #000;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.why {
+    color: #000;
+    text-align: right;
+    font-family: Montserrat;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+
+}
+
+.img {
+    color: #000;
+    text-align: right;
+    font-family: Montserrat;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    background: url(<path-to-image>) lightgray 50% / cover no-repeat;
+}
+
+.problem {
+    color: #000;
+    text-align: right;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    color: #000;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.xlass {
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    width: 184px;
+    height: 55px;
+    flex-shrink: 0;
+    border-radius: 30px;
+    background: #75C310;
+    text-align: center;
+}
+
+.colour {
+    color: #000;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.secondbreakfast {
+    color: #000;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.button {
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    width: 184px;
+    height: 55px;
+    flex-shrink: 0;
+    border-radius: 30px;
+    background: #75C310;
+    display: block;
+    margin: auto;
 }
